# dhorn

./: .gitignore  CMakeLists.txt  LICENSE  README.md  common.props  dhorn.sln  dhorn.vcxproj  dhorn.vcxproj.filters  setup.cmd  vector_timings.txt
cmake/: build_flags.cmake
d3d_tests/: CMakeLists.txt  PixelShader.hlsl  VertexShader.hlsl  d3d_tests.vcxproj  d3d_tests.vcxproj.filters  geometry.h  globals.h  main.cpp
docs/: coding_guidelines.docx  service_container.docx  sockets.docx  tree.docx  utf8_string.docx
efficiency_tests/: CMakeLists.txt  D3DVectorEfficiencyTests.cpp  efficiency.h  efficiency_tests.vcxproj  efficiency_tests.vcxproj.filters  inplace_function_tests.cpp  main.cpp  unicode_tests.cpp  vector_baseline_tests.cpp  vector_tests.cpp  vector_traits_tests.cpp
functional_tests/: CMakeLists.txt  console_test.h  functional_tests.vcxproj  functional_tests.vcxproj.filters  main.cpp
include/dhorn/: algorithm.h  animation.h  animation_manager.h  array_reference.h  auto_event_cookie.h  bitmask.h  com_ptr.h  com_utility.h  command_line.h  compact_pair.h  compressed_base.h  compressed_pair.h  console.h  crtp_base.h  d3d.h  debug.h  discrete_animation.h  event_source.h  functional.h  hstring.h  inplace_function.h  instance.h  iterator.h  json.h  linear_animation.h  math.h  message_queue.h  net.h  nullable_value.h  numeric.h  raii_object.h  scope_exit.h  service_container.h  singleton.h  socket_stream.h  sockets.h  string.h  synchronized_object.h  task_pool.h  thread_pool.h  (+14 more)
include/dhorn/com/: com_ptr.h  com_traits.h  com_utility.h  hresult_error.h
include/dhorn/d3d/: camera.h  colors.h  d3d_utils.h  d3d_vector.h  d3d_window.h  shapes.h  vector.h
include/dhorn/d3d/garbage/: dx_vector_base.h
include/dhorn/d3d11/: d3d11_utils.h  d3d11_window.h
include/dhorn/dynamic_ui/: render_node.h  render_tree.h
include/dhorn/dynamic_ui/details/: render_types.h
include/dhorn/dynamic_ui/garbage/: render_types.h
include/dhorn/experimental/: algorithm.h  animation.h  animation_manager.h  array_reference.h  async.h  bitmask.h  circular_buffer.h  com_ptr.h  com_utility.h  command_line.h  console.h  const_string.h  discrete_animation.h  event_source.h  functional.h  hstring.h  inplace_function.h  instance.h  json.h  linear_animation.h  math.h  message_queue.h  nullable_value.h  numeric.h  relative_ptr.h  scope_exit.h  scope_guard.h  service_container.h  socket_stream.h  sockets.h  string.h  string_literal.h  synchronized_object.h  task_pool.h  thread_pool.h  tree.h  type_traits.h  unique_any.h  unique_event_cookie.h  units.h  (+5 more)
include/dhorn/experimental/d3d/: camera.h  colors.h  d3d_utils.h  shapes.h
include/dhorn/experimental/d3d11/: d3d11_utils.h  d3d11_window.h
include/dhorn/math/: nointrin_traits.h  sse2_traits.h  vector.h
include/dhorn/unicode/: encoding.h  iterator.h
include/dhorn/windows/: auto_handle.h  com_ptr.h  file_time_clock.h  guid.h  hresult_error.h  tick_count_clock.h  window.h  windows.h  windows_exception.h
include/dhorn/winrt/: agile_ref.h  weak_ref.h  winrt_traits.h  winrt_utility.h
include/dhorn/wrl/: wrl_utility.h
tests/: AgileRefTests.cpp  AlgorithmTests.cpp  AllIncludeTest.cpp  AnimationManagerTests.cpp  AnimationTests.cpp  ArrayReferenceTests.cpp  AsyncTests.cpp  BitmaskTests.cpp  CMakeLists.txt  CRTPBaseTests.cpp  CircularBufferTests.cpp  ComPtrTests.cpp  ComTraitsTests.cpp  ComUtilityTests.cpp  CommandLineTests.cpp  CompressedBaseTests.cpp  CompressedPairTests.cpp  ConstStringTests.cpp  D3DVectorTests.cpp  EventSourceTests.cpp  FunctionalTest.cpp  FunctionalTests.cpp  GuidTests.cpp  HStringTests.cpp  InplaceFunctionTests.cpp  InstanceTests.cpp  IteratorTests.cpp  JSONTests.cpp  JsonScannerTests.cpp  MessageQueueTests.cpp  NetTests.cpp  NullableValueTest.cpp  NumericTests.cpp  RelativePtrTests.cpp  ScopeExitTests.cpp  ScopeGuardTests.cpp  ServiceContainerTests.cpp  SingletonTests.cpp  SocketStreamTests.cpp  SocketsTests.cpp  (+27 more)
window_tests/: CMakeLists.txt  globals.h  main.cpp  precomp.h  window_tests.vcxproj  window_tests.vcxproj.filters  worker.cpp  worker.h
(+7 files in other folders)
